# ai_coder

./: .env.template  .gitignore  LICENSE  README.md  ai_decorators.py  cli.py  openai_client.py  pyproject.toml  requirements.txt  setup.py
ai_coder/: __init__.py  ai_decorators.py  cli.py  code_formatter.py  code_utils.py  file_utils.py  llm_client.py  logger.py  openai_client.py  prompts.py
examples/fastapi/prompts/src/: main.py
examples/fastapi/src/: main.py
examples/hacker_news_summarizer/prompts/src/: main.py
examples/hacker_news_summarizer/src/: main.py  my_code.py
examples/prompts/src/: my_code.py
examples/simple-calculator/prompts/src/: main.py
examples/simple-calculator/src/: main.py
examples/tech_crunch_ai_news/prompts/src/: main.py
examples/tech_crunch_ai_news/src/: main.py
examples/tech_crunch_ai_news_class/prompts/src/: main.py
examples/tech_crunch_ai_news_class/src/: main.py
examples/tech_crunch_ai_news_func/prompts/src/: main.py
examples/tech_crunch_ai_news_func/src/: main.py
prompts/src/: my_code.py
src/: my_code.py
tech_crunch_ai_news/prompts/src/: main.py
