[tool.poetry]
name = "ai-coder"
version = "0.1.0"
description = ""
authors = ["Hao Qian <2035305+chandlerq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
astor = "^0.8.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
